--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "5000:5000"
     environment:
       NODE_ENV: development
-    # depends_on:
-      # - db
+    depends_on:
+      - db
     networks:
       - app-network
 
@@ -21,19 +21,19 @@ services:
     networks:
       - app-network
 
-  # db:
-  #   image: mysql:latest
-  #   command: --default-authentication-plugin=mysql_native_password
-  #   restart: always
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: example
-  #     MYSQL_DATABASE: chatapp
-  #   volumes:
-  #     - db_data:/var/lib/mysql
-  #   ports:
-  #     - "3306:3306"
-  #   networks:
-  #     - app-network
+  db:
+    image: mysql:latest
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: chatapp
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    networks:
+      - app-network
 
 volumes:
   db_data:
