--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: chatapp
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: chat
     volumes:
       - db_data:/var/lib/mysql
     ports:
